# PlexSearchBotSimple

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.json  jackett.py  main.py  plexsearchbot.py  pyproject.toml  requirements.txt  ruTorrent.py  users.json
.github/workflows/: pytest.yml  python-tests.yml
feral_services/: instance.py  jackett.py  ru_torrent.py
tests/: jackett_test.py  ru_torrent_test.py
